Update blockquote spacing and fixes link note

--- a/themes/V4/assets/scss/05-components/_components.notes.scss
+++ b/themes/V4/assets/scss/05-components/_components.notes.scss
@@ -133,6 +133,10 @@
             p {
                 @include body-sans-3;
                 max-width: none;
+
+                & + p {
+                    margin-top: var(--space-unit);
+                }
             }
 
             & + p {
